@@ -174,7 +174,9 @@ Turn on torrent batch mode (implies torrent mode). Calculates batch-torrent
 for the files specified at command line and saves the torrent file to
 the file\-path. The option \-r <directory> can be useful in this mode.
 .IP "\-\-bt\-private"
-Generate BTIH for a private BitTorrent tracker.
+Generate torrent file or BTIH for a private BitTorrent tracker.
+.IP "\-\-bt\-transmission"
+Generate torrent file or BTIH compatible with Transmission torrent client.
 .IP "\-\-bt\-piece\-length"
 Set the
 .I "piece length"
