@@ -38,17 +38,18 @@ enum {
 	OPT_IGNORE_CASE = 0x200,
 	OPT_VERBOSE    = 0x400,
 	OPT_PERCENTS   = 0x800,
-	OPT_SPEED      = 0x1000,
-	OPT_BT_PRIVATE = 0x2000,
+	OPT_BT_PRIVATE = 0x1000,
+	OPT_BT_TRANSMISSION = 0x2000,
 	OPT_UPPERCASE  = 0x4000,
 	OPT_LOWERCASE  = 0x8000,
-	OPT_GOST_REVERSE = 0x10000,
+	OPT_SPEED      = 0x10000,
 	OPT_BENCH_RAW  = 0x20000,
 	OPT_NO_DETECT_BY_EXT = 0x40000,
 	OPT_NO_PATH_ESCAPING = 0x80000,
-	OPT_HEX        = 0x0100000,
-	OPT_BASE32     = 0x0200000,
-	OPT_BASE64     = 0x0400000,
+	OPT_GOST_REVERSE = 0x0100000,
+	OPT_HEX        = 0x0200000,
+	OPT_BASE32     = 0x0400000,
+	OPT_BASE64     = 0x0800000,
 	OPT_FMT_MODIFIERS = OPT_HEX | OPT_BASE32 | OPT_BASE64,
 
 #ifdef _WIN32
